Fix description spacing, change desc
- Fix main bg for iPhone X borders
- Tidy copy css and old favicon

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -98,6 +98,7 @@
   font-weight: 400;
   font-style: normal;
   word-spacing: 0.15rem;
+  margin: 2rem 0 0;
 }
 
 .description > a {
